<resources>
    <string name="app_name">Jaguar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="html">HTML</string>
    <string name="javascript">JavaScript</string>
    <string name="python">Python</string>
    <string name="ver_mas">Ver más</string>
    <string name="noticias">Noticias</string>
    <string name="leer_mas">Leer más ›</string>
</resources>
