<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.InicioFragmento">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:background="@color/colorClaro"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.98"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@color/colorNegro"
                android:textSize="26dp"
                android:gravity="center_vertical"></TextView>

            <ImageButton
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginRight="14dp"
                android:layout_weight="0.01"
                android:padding="8dp"
                android:src="@drawable/ic_person_outline"
                android:background="@drawable/circulogris"
                android:scaleType="fitCenter"
                android:tint="@color/colorNegro"
                android:elevation="1dp">
            </ImageButton>

            <ImageButton
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="0.01"
                android:padding="8dp"
                android:src="@drawable/ic_dehaze"
                android:background="@drawable/circulogris"
                android:tint="@color/colorNegro"
                android:scaleType="fitCenter"
                android:elevation="1dp">
            </ImageButton>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/inicioScroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="-2dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <HorizontalScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fillViewport="true"
                    android:measureAllChildren="false"
                    android:scrollbars="none"
                    android:paddingTop="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="0.25"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/circulo"
                                android:elevation="@dimen/cardview_default_radius">
                            </LinearLayout>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorInactivo"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/javascript">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="0.25"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/circulo">
                            </LinearLayout>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorInactivo"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/html">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="0.25"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/circulo">
                            </LinearLayout>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorInactivo"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/python">
                            </TextView>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="0.25"
                            android:orientation="vertical"
                            >
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/circulo">
                            </LinearLayout>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorInactivo"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/ver_mas">
                            </TextView>
                        </LinearLayout>

                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/noticias"
                    android:textColor="@color/colorNegro"
                    android:textSize="26dp"></TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_publicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>